{
    "name": "InputActions",
    "maps": [
        {
            "name": "MyActionMapA",
            "id": "abbfcc8c-627a-4698-ac46-8aabbd39a2e5",
            "actions": [
                {
                    "name": "_GetNameDummy",
                    "type": "Button",
                    "id": "0505b1a2-bd81-4b8f-a014-f66892a9ff88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MyButtonAction",
                    "type": "Button",
                    "id": "cdeaee77-4ea3-48f9-b63b-4ac7189aecad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MyValueActionVector",
                    "type": "Value",
                    "id": "19f91964-54c3-4b4c-b468-dcd25aae48de",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MyButtonAction_PressRelease",
                    "type": "Button",
                    "id": "bcc5cdd6-7525-4382-b3e5-8fd27a756f88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7306a857-c941-4f0e-b17a-00181c8a2e5d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MyButtonAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6960e88b-8e67-4b8a-b3e6-a9e142a8a248",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MyButtonAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff0ccf6a-3808-4205-bba2-238820a4ad0f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MyValueActionVector",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94a17375-a316-4287-87fd-dd7f6059216d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MyValueActionVector",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3c0b0c8-5366-4a77-9ec3-0a3224f755f8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MyButtonAction_PressRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dce760c-3948-4b79-9501-9cb72c13d227",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MyButtonAction_PressRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95074ee4-8475-413f-b45f-ee2892a96961",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "_GetNameDummy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MyActionMapB",
            "id": "bcf94342-5607-4c34-9a4c-b1dd2d94d08c",
            "actions": [
                {
                    "name": "_GetNameDummy",
                    "type": "Button",
                    "id": "7416d56b-7c97-4830-826b-a287f10ad6ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MyButtonActionB",
                    "type": "Button",
                    "id": "05ad600a-f63c-4cd0-97bd-c174f2894e09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2baad5de-47cc-492a-9a76-edc1394dd051",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "MyButtonActionB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7aa2a4ec-ec05-4dd0-8ee1-44e9f44f82ad",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MyButtonActionB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2505f946-3b07-49d1-8a1b-65624cc53100",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "_GetNameDummy",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GamePlay",
            "id": "73305741-237b-4877-813f-fe396f7b1358",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "582e726f-063c-4c0e-8473-ada8ad9e0bee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "55dd9c7c-15b7-4ebf-9b5c-5f7769272dc0",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f17f631d-1680-4f3c-b590-c90284063c13",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "644c2986-44ae-4813-90b0-6ad28fe93e71",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "71fcc767-858d-464e-886a-35c36cc066b5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4443f2cf-2bae-4bd2-a8a1-0680278900a1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}